# tichu

./: .coverage  .coveragerc  .env.example  .gitignore  LICENSE  README.md  benchmark.py  config.py  conftest.py  cov.ps1  generate_doc.py  main.py  poc_prob_of_stair.py  poc_prob_of_street.py  poc_websocket.py  proc_gpt.py  pyproject.toml  pytest.ini  requirements.txt  run_coverage.bat  server.py  ws-test-client.py  wsclient.py
.github/workflows/: coverage.yml
_dev/: is_dirty.py
_dev/altkram/: lobby.py  private_state.py  reconnect_service.py
_dev/tichu2/: agents.py  benchmark.py  callbacks.py  cards.py  losses.py  main.py  migrate.py  nnet.py  state.py  wsclient.py
_dev/tichu2/brettspielwelt/: database.py  generator.py
_dev/vorherige_version/: client.py  game_engine.py  globals.py  server.py
cov/: .coverage  coverage.xml
data/lib/: street5_hi.pkl  street5_hi.txt
docs/: Benchmark.txt  Beobachtungsraum.md  Entwurf.md  Glossar.md  Konzept_NNetAgent.md  NNetAgent.md  Nachrichten.docx  Observation Space - Events.xlsx  Performance alte vs neue Version.txt  Planung_WebClient.md  Projekt.md  Projektdokumentation.md  Projektplan.docx  Prompts.txt  Quellen.md  Release in Github erstellen.md  Technische_Dokumentation.md  Tichu Messaging-Protokoll.txt  Todos.md  WS-Nachrichten.md  Zustandsänderung bei Ereignis.xlsx  benchmark.txt
docs/Deep Learning/: Definitionen Deep Learning.md  Ein- und Ausgabewerte.txt  Kombinationen.md  Kombinationen.txt  nnet.txt
docs/pydoc/: src.arena.html  src.private_state.html
docs/python/: Mutable Immutable.md  __init__.md  asyncio.md  dict set list.md  if __name__.md  noinspection.md  pytest_tutorial.md  sqlalchemy-types.sql  sqlite.md
notebooks/: BSW_01_Analyse.ipynb  BSW_01_Datenbestand.ipynb  BSW_02_Elo.ipynb  BSW_02_ScoreDiff.ipynb  BSW_02_Score_Diff.ipynb  BSW_03_ScoreCum.ipynb  BSW_04_Points.ipynb  BSW_05_Elo.ipynb  BSW_05_Elo_.ipynb
poc/: Gemini 2.5 pro.py  ablage.py  benchmark.py  gcpn_vn_mit_pytorch.py  gcpn_vn_mit_tensorflow.py  pickling_test.py  poc_eda.js  poc_generate_4_bomb.py  poc_generate_intersect.py  poc_generate_streets.py  poc_interrupt.py  poc_pickling.py  poc_prob.py  poc_prob_files.py  poc_sqlite.py  poc_street.py  poc_version.py  poc_ws_client.py  proc_gpt.py  server_neu.py
poc/_dev/: config.py  convert_cards.py  json_bsp.py
poc/arena_sync/: agent.py  arena.py  engine.py  main.py  state.py
src/: arena.py  arena2.py  config.py  game_engine.py  game_engine2.py  game_factory.py  gpt.py  lobby.py  private_state.py  private_state2.py  public_state.py  public_state2.py  reconnect_service.py  street.py  temp.py  ws_handler.py
src/common/: errors.py  git_utils.py  logger.py  rand.py  random.py  statistic.py
src/deprecated/: calc_statistic.py  combinations.py  probabilities.py  vectors.py
src/lib/: bw.py  cards.py  combinations.py  errors.py  partitions.py  prob.py  prob_files.py  probabilities.py
src/players/: agent.py  client.py  dl_agent.py  heuristic_agent.py  nnet_agent.py  peer.py  player.py  random_agent.py
tests/: .coverage  conftest.py  test_agent.py  test_arena.py  test_cards.py  test_combinations.py  test_game_engine.py  test_git_utils.py  test_heuristik_agent.py  test_logger.py  test_partitions.py  test_player.py  test_private_state.py  test_prob.py  test_prob_calc_statistic.py  test_prob_hi.py  test_prob_lo.py  test_probabilities.py  test_probability_of_hand.py  test_public_state.py  test_rand.py  test_random_agent.py  test_statistic.py
tests/common/: test_git_utils.py  test_logger.py  test_rand.py
tests/lib/: test_cards.py  test_combinations.py
tests/players/: test_agent.py  test_player.py  test_random_agent.py
tests/prob/: test_prob_hi.py  test_prob_lo.py
tests/src/: test_arena.py  test_game_engine.py  test_private_state.py  test_public_state.py
tests_with_unittests/: .coverage  test_combinations.py  test_game_engine_mutability.py  test_heuristik_agent.py  test_partitions.py  test_private_state.py  test_prob_calc_statistic.py  test_prob_hi.py  test_prob_lo.py  test_public_state.py  test_rand.py  test_random_agent.py
web/: index.html  style.css  test.html
web/_alt/: alt.js  card-handler.js  index.html  style.css
web/css/: animation.css  animations.css  common.css  dialogs.css  game-table-view.css  loading-view.css  lobby-view.css  login-view.css  modal.css  modals.css  table-view.css  test.css
web/js/: animation.js  animations.js  app-controller.js  bot.js  bot2.js  card-handler.js  config.js  constants.js  dialogs.js  error-codes.js  event-bus.js  game-state.js  helpers.js  lib.js  lobby-view.js  main.js  modal.js  modals.js  network.js  random.js  sound-manager.js  sound.js  state.js  table-view.js  test-runner.js  tests.js  ui-manager.js  user.js  view-manager.js  web-socket-service.js
(+62 files in other folders)
